--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "budget-app",
-  "version": "1.0.0",
-  "description": "App to help month to month budgeting",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "author": "Brayden Robbins",
-  "license": "ISC",
   "dependencies": {
-    "mongo": "^0.1.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "jade": "~1.11.0",
     "mongoose": "^5.4.7",
+    "morgan": "~1.9.0",
     "nodemon": "^1.18.9"
   }
 }
